--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 markers = [
-    "typo_id"
+    "typo_id: the example scenario number"
 ]
 
 [tool.coverage.paths]
