--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,23 @@ markers = [
     "typo_id: the example scenario number"
 ]
 
+[tool.coverage.run]
+source = [
+    "textproof",
+]
+
 [tool.coverage.paths]
 source = [
     "src/textproof",
     "**/site-packages/textproof"
 ]
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+envlist = py37, py38, py39
+
+[testenv]
+deps = pytest
+commands = pytest
+"""
